# gcmethod_1d

./: CMakeLists.txt  gcmethod_1d.h  gcmethod_1d.ini  main.cpp
